# ais

./: .env.template  .gitignore  .terraform.lock.hcl  CLAUDE.md  Dockerfile  FRONTEND_PERFORMANCE_ANALYSIS.md  FRONTEND_REVIEW_REPORT.md  PLAN.md  README.md  app.py  bronze_to_silver.py  configuration.py  consolidate.py  consolidate_optimized.py  consolidate_today.py  cors.json  docker-compose.yml  listener.py  main.tf  publish_ducklake.py  pyproject.toml  requirements.txt  silver_to_gold.py  test_s3.py  variables.tf
.claude/memory/: MEMORY.md  ml-v2-improvements.md  ml-v2-pipeline.md
.github/workflows/: deploy-front.yml  ducklake-hourly.yml  ducklake-v3-daily.yml
ducklake_metadata/: ais.ducklake.wal  metadata.ducklake  schema.sql
front/: .gitignore  MULTITHREADS.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
front/services/satellite-proxy/: pyproject.toml
front/src/: App.tsx  SatelliteControls.tsx  Sidebar.tsx  ThreadBenchmark.tsx  Timeline.tsx  VesselDetails.tsx  (+16 more)
front_v2/: package-lock.json  package.json
infra/: cors.json
ml/: PROGRESS.md  build_dataset.py  build_features_v7.py  build_route_features.py  build_sequences.py  build_sequences_long.py  detect_arrivals.py  feedback.md  fetch_ports.py  inference.py  plan.md  train.py  train_cascade.py  train_horizon.py  train_v6_global.py  train_v7.py  train_v8.py  train_v9.py  train_v9_gated.py  train_v9_residual.py  train_v9_stack.py  tune.py  utils.py
pipeline/: PLAN_DUCKLAKE.md  consolidate_optimized.py  publish_ducklake.py
scripts/: noaa_to_parquet.py
(+135 files in other folders)
