[project]
name = "ais"
version = "0.1.0"
description = "Serverless AIS maritime traffic viewer pipeline"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0",
    "zstandard>=0.22.0",
    "python-dotenv>=1.0",
    "websockets>=11.0",
]

[tool.uv]
package = false
