[project]
name = "ais"
version = "0.1.0"
description = "Serverless AIS maritime traffic viewer pipeline"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0",
    "zstandard>=0.22.0",
    "python-dotenv>=1.0",
    "websockets>=11.0",
    "pytz>=2026.2",
    "xgboost>=3.2.0",
    "scikit-learn>=1.9.0",
    "polars>=1.41.2",
    "lightgbm>=4.6.0",
    "optuna>=4.9.0",
    "catboost>=1.2.10",
    "searoute>=1.6.0",

]

[tool.uv]
package = false
